overflow:auto, justify content: center // fixed excess content at modal

--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -27,7 +27,7 @@
 }
 
 .icon-redes-contact:hover {
-  color: #e5c7bd;
+  color: /* #e5c7bd; */ #ff8c9b;
 }
 /*   
       .d{
